# sparse-linear-algebra

./: .gitignore  .travis.yml  BUILD_AND_TEST.md  CHANGELOG.markdown  CHANGELOG.md  CHOLESKY_TESTS.md  COMMENTED_OUT_FUNCTIONS.md  CONTRIBUTING.md  CONTRIBUTORS.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_BICGSTAB.md  IMPLEMENTATION_SUMMARY_CGS.md  README.md  makefile  minimal_test.hs  sparse-linear-algebra.cabal  stack.yaml  test_eigsqr_issue.hs
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: ci.yml  matrix_factorizations.yml
Math/Linear/: Sparse.hs
accelerate/: sparse-linear-algebra-accelerate.cabal  stack.yaml
accelerate/bench/: Bench.hs
accelerate/src/Data/Array/Accelerate/Sparse/: COOElem.hs  SMatrix.hs  SVector.hs  Static.hs
accelerate/src/Numeric/LinearAlgebra/: Accelerate.hs
accelerate/src/Numeric/LinearAlgebra/Sparse/: Accelerate.hs
accelerate/test/: LibSpec.hs
app/: Main.hs
core/: LICENSE  README.md  sparse-linear-algebra-core.cabal  stack.yaml
core/src/Data/Sparse/: Types.hs
core/src/Numeric/: Eps.hs
core/src/Numeric/LinearAlgebra/: Class.hs
core/src/Numeric/LinearAlgebra/Core/: Class.hs  Sparse.hs
core/test/: LibSpec.hs
dist-newstyle/cache/: compiler  config
issues/: issue_denjoh.hs
perf/: Main.hs
src/Control/: Iterative.hs  Misc.hs
src/Control/Exception/: Common.hs
src/Control/Iterative/: Internal.hi  Internal.hs
src/Data/: NonEmpty.hs
src/Data/Sparse/: Common.hs  PPrint.hi  PPrint.hs  SpMatrix.hs  SpVector.hs  TestData.hs  Types.hi  Types.hs  Utils.hs
src/Data/Sparse/IntMap2/: IntMap2.hs
src/Data/Sparse/Internal/: CSB.hs  CSC.hs  CSR.hs  CSRVector.hs  IntM.hs  IntMap2.hs  SHVector.hs  SList.hs  SVector.hs  SpMatrix_Lex.hs  Stream.hs  TriMatrix.hs  Utils.hs
src/Data/Sparse/Internal/SVector/: Mutable.hs
src/Data/Type/: Natural.hs
src/Math/Linear/: Sparse.hs
src/Math/Linear/Sparse/: IntMap.hs
src/Numeric/: Eps.hi  Eps.hs
src/Numeric/LinearAlgebra/: Class.hs  Data.hs  Sparse.hs
src/Numeric/LinearAlgebra/EigenSolvers/: Experimental.hs
src/Numeric/LinearAlgebra/LinearSolvers/: Experimental.hs
src/Numeric/LinearAlgebra/Sparse/: IntMap.hs
test/: DebugCGS.hs  Laws.hs  LibSpec.hs  MatrixFactorizationsMain.hs  MatrixFactorizationsSpec.hs  Perf.hs  Spec.hs  TestData.hs
test/data/: e05r0000.mtx  e05r0000_rhs1.mtx
vector/: ChangeLog.md  README.md  package.yaml  sparse-linear-algebra-vector.cabal  stack.yaml
vector/src/Data/Sparse/Internal/: CSB.hs  CSC.hs  CSR.hs
vector/src/Data/Sparse/Internal/Vector/: Utils.hs
