name:                sparse-linear-algebra
version:             0.2.9.9
synopsis:            Numerical computing in native Haskell
description:
  /Overview/
  .
  The @sparse-linear-algebra@ library provides iterative linear solvers, matrix decompositions, eigenvalue algorithms and related utilities. The user interface is provided by the top-level module "Numeric.LinearAlgebra.Sparse":
  .
  @
  import           Numeric.LinearAlgebra.Sparse
  @
  .
  Please refer to the README file for usage examples.
  .
homepage:            https://github.com/ocramz/sparse-linear-algebra
license:             GPL-3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco gmail
copyright:           2016-2017 Marco Zocca
category:            Numeric
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.markdown
                     CONTRIBUTORS.md
data-dir:            test/data
data-files:          e05r0000.mtx
                     e05r0000_rhs1.mtx
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2

source-repository head
  type:     git
  location: https://github.com/ocramz/sparse-linear-algebra
                     
flag dump
  manual: True
  default: False

library
  default-language:    Haskell2010
  ghc-options:
              -- -Wall
              -O2 -Wno-name-shadowing -Wno-unused-top-binds -Wno-missing-signatures -Wno-unused-imports

  if flag(dump)
    ghc-options: -ddump-simpl -ddump-stg -ddump-to-file
  
  hs-source-dirs:      src
  exposed-modules:     Numeric.LinearAlgebra.Sparse
                       Numeric.LinearAlgebra.Class
                       Numeric.Eps
                       Data.Sparse.SpVector
                       Data.Sparse.SpMatrix
                       Data.Sparse.Common
                       Control.Exception.Common                       
  other-modules:       Data.Sparse.Internal.IntMap2
                       Data.Sparse.Internal.IntM
                       Data.Sparse.Internal.Utils
                       Data.Sparse.Internal.SVector
                       Data.Sparse.Internal.SVector.Mutable
                       Data.Sparse.Internal.Stream                   
                       -- Data.Sparse.Internal.SHVector
                       Data.Sparse.Internal.SList
                       Data.Sparse.Internal.TriMatrix
                       -- Data.Sparse.Internal.CSB
                       -- Data.Sparse.Internal.CSC           
                       Data.Sparse.Utils
                       Data.Sparse.PPrint
                       Data.Sparse.Types
                       Control.Iterative
                       Numeric.LinearAlgebra.LinearSolvers.Experimental
                       Numeric.LinearAlgebra.EigenSolvers.Experimental
  build-depends:       base >= 4.7 && < 5
                     , primitive
                     -- , deepseq
                     , containers
                     , vector
                     , vector-algorithms
                     -- , hybrid-vectors
                     , exceptions
                     , mtl >= 2.2.1                     
                     , transformers
                     -- , writer-cps-transformers
                     -- , monad-log == 0.1.1.0
                     -- , monad-par
                     , QuickCheck >= 2.8.2
                     , hspec
                     -- , primitive >= 0.6.1.0
                     -- , mwc-random                     


-- executable perf
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      perf
--   main-is:             Main.hs
--   build-depends:       base
--                      , sparse-linear-algebra
--                      , matrix-market-attoparsec
--                      , scientific
  
test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       LibSpec
  main-is:             Spec.hs
  build-depends:       QuickCheck >= 2.8.2
                     , base
                     , containers
                     -- , criterion == 1.1.4.0
                     , hspec
                     , mtl >= 2.2.1
                     , exceptions
                     , mwc-random
                     , primitive >= 0.6.1.0
                     , sparse-linear-algebra
                     , scientific
                     , matrix-market-attoparsec






-- executable issue_denjoh
--   default-language:    Haskell2010
--   ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      issues
--   main-is:             issue_denjoh.hs
--   build-depends:       base
--                      , sparse-linear-algebra