name:                sparse-linear-algebra
version:             0.3.2
synopsis:            Numerical computing in native Haskell
description:
  /Overview/
  .
  The @sparse-linear-algebra@ library provides iterative linear solvers, matrix decompositions, eigenvalue algorithms and related utilities. The user interface is provided by the top-level module "Numeric.LinearAlgebra.Sparse":
  .
  @
  import           Numeric.LinearAlgebra.Sparse
  @
  .
  Please refer to the README file for usage examples.
  .
homepage:            https://github.com/ocramz/sparse-linear-algebra
license:             GPL-3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco gmail
copyright:           2016-2018 Marco Zocca
category:            Numeric
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.markdown
                     CONTRIBUTORS.md
data-dir:            test/data
data-files:          e05r0000.mtx
                     e05r0000_rhs1.mtx
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.2

source-repository head
  type:     git
  location: https://github.com/ocramz/sparse-linear-algebra
                     
flag dump
  manual: True
  default: False

library
  default-language:    Haskell2010
  ghc-options:
              -- -O2 -Wall
              -O2 -Wno-name-shadowing -Wno-unused-top-binds -Wno-unused-local-binds -Wno-missing-signatures -Wno-unused-imports

  if flag(dump)
    ghc-options: -ddump-simpl -ddump-stg -ddump-to-file
  
  hs-source-dirs:      src
  exposed-modules:     Numeric.LinearAlgebra.Sparse
                       Numeric.LinearAlgebra.Class
                       Numeric.Eps
                       Data.Sparse.SpVector
                       Data.Sparse.SpMatrix
                       Data.Sparse.Common
                       Data.Sparse.Utils
                       Control.Exception.Common
  other-modules:       Data.Sparse.Internal.IntMap2
                       Data.Sparse.Internal.IntM
                       Data.Sparse.Internal.Utils
                       Data.Sparse.Internal.SVector
                       Data.Sparse.Internal.SVector.Mutable
                       Data.Sparse.Internal.Stream                   
                       -- Data.Sparse.Internal.SHVector
                       Data.Sparse.Internal.SList
                       Data.Sparse.Internal.TriMatrix
                       -- Data.Sparse.Internal.CSB
                       -- Data.Sparse.Internal.CSC           
                       -- Data.Sparse.Utils
                       Data.Sparse.PPrint
                       Data.Sparse.Types
                       Control.Iterative
                       Control.Iterative.Internal
                       Control.Misc
                       Data.NonEmpty
                       Numeric.LinearAlgebra.LinearSolvers.Experimental
                       Numeric.LinearAlgebra.EigenSolvers.Experimental
  build-depends:       base >= 4.7 && < 5
                     -- , deepseq
                     , containers >= 0.5.7.1
                     -- , data-default-class
                     , exceptions >= 0.8.3
                     , logging-effect >= 1.2.0
                     , mtl >= 2.2.1                                          
                     , primitive >= 0.6.2.0
                     , transformers >= 0.5.2.0                    
                     , vector >= 0.12.0.1
                     , vector-algorithms >= 0.7.0.1
                     -- , hybrid-vectors
                     -- , writer-cps-transformers
                     -- , monad-log == 0.1.1.0
                     -- , monad-par

                     -- -- DEBUG
                     , QuickCheck >= 2.8.2
                     , hspec
                     -- , primitive >= 0.6.1.0
                     -- , mwc-random                     


-- executable perf
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      perf
--   main-is:             Main.hs
--   build-depends:       base
--                      , sparse-linear-algebra
--                      , matrix-market-attoparsec
--                      , scientific
  
test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       LibSpec
  main-is:             Spec.hs
  build-depends:       QuickCheck >= 2.8.2
                     , base
                     , containers
                     -- , criterion == 1.1.4.0
                     , hspec
                     , mtl >= 2.2.1
                     , exceptions
                     , logging-effect
                     , primitive >= 0.6.1.0
                     , sparse-linear-algebra
                     , scientific
                     , matrix-market-attoparsec






-- executable issue_denjoh
--   default-language:    Haskell2010
--   ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      issues
--   main-is:             issue_denjoh.hs
--   build-depends:       base
--                      , sparse-linear-algebra