name:                sparse-linear-algebra-accelerate
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/sparse-linear-algebra
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          zocca.marco gmail
copyright:           2017 Marco Zocca
category:            Numeric
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Numeric.LinearAlgebra.Accelerate
                       Data.Array.Accelerate.Sparse.SVector
                       Data.Array.Accelerate.Sparse.SMatrix                       
  build-depends:       base >= 4.7 && < 5
                     -- , sparse-linear-algebra-core
                     , accelerate
                     , accelerate-io
                     , vector
                     , vector-algorithms

-- executable sparse-linear-algebra-accelerate
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , sparse-linear-algebra-accelerate

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sparse-linear-algebra-accelerate
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/githubuser/sparse-linear-algebra-accelerate
