name:                sparse-linear-algebra-core
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/sparse-linear-algebra
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco gmail
copyright:           2017 Marco Zocca
category:            Numeric
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Numeric.LinearAlgebra.Core.Class
                       Numeric.LinearAlgebra.Core.Sparse
                       Numeric.Eps
  other-modules:       Data.Sparse.Types
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , exceptions


test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sparse-linear-algebra-core
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/sparse-linear-algebra
